--- a/web/index.html
+++ b/web/index.html
@@ -2,22 +2,11 @@
 <html>
 <head>
 <meta charset=utf-8>
-<title>ISEE-3 Telemetry</title>
+<title>ISEE-3 Reboot!</title>
 <link rel=stylesheet type=text/css href=envision.min.css>
+<script src="/socket.io/socket.io.js"></script>
 <script>
-
-  function get_listing() {
-    var xhr = new XMLHttpRequest();
-    xhr.onload = function() { console.log(this.responseText); }
-    xhr.open('get', 'http://localhost:21012/');
-    request = {
-      action: 'list',
-      seq: 0
-    }
-    xhr.send(request);
-  }
-
-  addEventListener('load', get_listing);
+  var socket = io();
 </script>
 </head>
 <body>
