Update current listing instead of appending.
Keep a list of elements seen by the web page and use that
to look up and update an already displaying element with
its new value. Create a display <li> for each new element
we encounter.

--- a/web/index.html
+++ b/web/index.html
@@ -7,16 +7,20 @@
 <script src="/socket.io/socket.io.js"></script>
 <script>
 function start() {
+  var elements = {};
   var socket = io();
   socket.on('data', function(data) {
-    console.log(data);
-    var ul = document.getElementById('data');
-    var li = document.createElement('li');
+    if (! (data.result.id in elements)) {
+      Object.defineProperty(elements, data.result.id, data.result);
+      var ul = document.getElementById('data');
+      var li = document.createElement('li');
+      li.id = data.result.id;
+      ul.appendChild(li);
+    }
     var text = data.result.id;
     text += ' ' + data.result.value;
     text += ' ' + data.result.time;
-    li.textContent = text;
-    ul.appendChild(li);
+    document.getElementById(data.result.id).textContent = text;
   });
 }
 addEventListener('load', start);
