Add a source link.

--- a/web/index.html
+++ b/web/index.html
@@ -31,5 +31,8 @@ addEventListener('load', start);
   <div id=plot></div>
   <script src=envision.min.js></script>
   <ul id=data></ul>
+  <div id=footer>
+    <p>Source available on <a href="https://github.com/rillian/isee3-telemetry/tree/dev">github</a>.</p>
+  </div>
 </body>
 </html>
